# Mayer

./: .gitignore  README.md  build.gradle  build.gradle.kts  opencv.build.gradle.txt  settings.gradle
.github/workflows/: android.yml  ci.yml  release.yml
app/: build.gradle  build.gradle.kts  proguard-rules.pro  version.properties
app/keystore/: release.jks
app/release/: output-metadata.json
app/src/androidTest/java/icu/pboymt/mayer/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  mayer.cpp  mayer.h
app/src/main/java/icu/pboymt/mayer/: MayerAccessibilityService.kt  MayerApplication.kt  MayerFloatingService.kt  MayerMonitorService.kt
app/src/main/java/icu/pboymt/mayer/assets/: Templates.kt  Tpls.kt
app/src/main/java/icu/pboymt/mayer/core/: MayerAccessibilityHelper.kt  MayerRunner.kt  MayerScript.kt  MayerTemplate.kt  MayerTemplatesHelper.kt  annotations.kt
app/src/main/java/icu/pboymt/mayer/core/modules/: MayerDisplay.kt
app/src/main/java/icu/pboymt/mayer/logging/: OverlayWindowWriter.kt
app/src/main/java/icu/pboymt/mayer/runner/: MayerAccessibilityHelper.kt  MayerImageManager.kt  MayerRunner.kt  MayerScript.kt  MayerTemplatesHelper.kt  annotations.kt
app/src/main/java/icu/pboymt/mayer/scripts/: RingScript.kt  SingleScript.kt
app/src/main/java/icu/pboymt/mayer/ui/: AboutActivity.kt  MainActivity.kt  MainActivityExt.kt  MayerApp.kt  OverlaySettingActivity.kt
app/src/main/java/icu/pboymt/mayer/ui/component/: Info.kt  PageTitle.kt  ServiceStatusCard.kt  TabTitle.kt
app/src/main/java/icu/pboymt/mayer/ui/navigation/: MayerNavigationActions.kt  MayerNavigationComponents.kt
app/src/main/java/icu/pboymt/mayer/ui/overlay/: MyLifecycleOwner.kt
app/src/main/java/icu/pboymt/mayer/ui/prefs/: PrefScriptRingActivity.kt
app/src/main/java/icu/pboymt/mayer/utils/: DataStore.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v29/: themes.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
app/src/main/resources/: tinylog.properties
app/src/test/java/icu/pboymt/mayer/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
(+4 files in other folders)
